update rule 数组和对象键值对最后一个逗号

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,9 +2,9 @@ name: Next release
 
 on:
   push:
-    branches: [ release ]
+    branches: [ master, release ]
   pull_request:
-    branches: [ release ]
+    branches: [ master, release ]
 
 jobs:
   publish-to-npm:
